Bug Fixes + Get Work Term Buttons

--- a/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
+++ b/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
@@ -8,7 +8,7 @@
   <div class="content">
     <div class="description">
       <h3>Observação</h3>
-      <textarea id="description" name="description" [(ngModel)]="description" (ngModelChange)="changeDescription($event)"></textarea>
+      <textarea id="description" placeholder="Observação" name="description" [(ngModel)]="description" (ngModelChange)="changeDescription($event)"></textarea>
     </div>
     <mat-divider></mat-divider>
     <div class="files">
