--- a/code/js/front-end/src/app/create-work/create-work.component.html
+++ b/code/js/front-end/src/app/create-work/create-work.component.html
@@ -16,8 +16,8 @@
         </div>
         <div class="topic-orientation">
           <mat-label>Descrição:</mat-label>
-          <input type="text" id="workDescription" name="workDescription" placeholder="Descrição"
-                 [(ngModel)]="work.description" required>
+          <textarea type="text" id="workDescription" name="workDescription" placeholder="Descrição"
+                    [(ngModel)]="work.description" required></textarea>
         </div>
         <div class="topic-orientation">
           <mat-label>Verificação da Câmara:</mat-label>
