--- a/code/js/front-end/src/app/create-log-entry/create-log-entry.component.css
+++ b/code/js/front-end/src/app/create-log-entry/create-log-entry.component.css
@@ -11,6 +11,17 @@
   margin-bottom: 20px;
 }
 
+textarea {
+  min-height: 17px;
+  height: 17px;
+  min-width: 200px;
+  width: 200px;
+  max-width: 50%;
+  border: 1px solid #11113D;
+  border-radius: 5px;
+  padding: 5px 5px;
+}
+
 .small-button {
   display: flex;
   align-items: center;
