--- a/code/js/front-end/src/app/work-verifications/work-verifications.component.html
+++ b/code/js/front-end/src/app/work-verifications/work-verifications.component.html
@@ -13,7 +13,7 @@
 <mat-divider></mat-divider>
 <div>
   <mat-list *ngFor="let entry of filteredVerifications">
-    <mat-list-item>
+    <mat-list-item (click)="getOpeningTerm(entry.id)">
       <div matListItemTitle>{{ entry.name }}</div>
       <div matListItemLine>{{ entry.owner }} pediu autorização à câmara para a obra {{entry.name}}</div>
       <div matListItemMeta>
